# this is the poetry config file for the PyPI version of Pixelveil, not the Rust crate.

[project]
name = "pixelveil"
version = "0.1.0"
description = ""
authors = [
    {name = "Jebbex",email = "107323805+Jebbex1@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["maturin>=1.2"]
build-backend = "maturin"


[tool.maturin]
manifest-path = "python/Cargo.toml"
bindings = "pyo3"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "maturin (>=1.10.2,<2.0.0)",
]

[tool.pytest.ini_options]
testpaths = [
    "python/tests",
]
