[project]
name = "pixelveil"
version = "1.0.1"
description = "A performant steganography and steganalysis library for hiding data in images, audio files, and videos"
authors = [{ name = "Jebbex", email = "107323805+Jebbex1@users.noreply.github.com" }]
requires-python = ">=3.13"
readme = "python/README.md"
license = { text = "MIT" }
dependencies = []


[build-system]
requires = ["maturin>=1.2"]
build-backend = "maturin"


[tool.maturin]
bindings = "pyo3"
python-source = "python"
manifest-path = "python/Cargo.toml"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "maturin (>=1.10.2,<2.0.0)",
]

[tool.pytest.ini_options]
testpaths = [
    "python/tests",
]
