[package]
name = "pixelveil"
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT"
authors = ["Jebbex <107323805+Jebbex1@users.noreply.github.com>"]
readme = "../README.md"

[lib]
name = "pixelveil"
path = "src/lib.rs"

[dependencies]
image = "0.25.8"
itertools = "0.14.0"
rand = "0.9.2"
num = "0.4.3"
rand_distr = "0.5.1"
statrs = "0.18.0"
