[package]
name = "pixelveil"
version = "1.0.0"
edition = "2024"
description = "A performant steganography and steganalysis library for hiding data in images, audio files, and videos"
license = "MIT"
authors = ["Jebbex <107323805+Jebbex1@users.noreply.github.com>"]
readme = "../README.md"
repository = "https://github.com/Jebbex1/Pixelveil"
documentation = "https://docs.rs/pixelveil/"
keywords = ["steganography", "steganalysis"]
workspace = "../"


[lib]
name = "pixelveil"
path = "src/lib.rs"

[dependencies]
image = "0.25.9"
itertools = "0.14.0"
rand = "0.9.2"
num = "0.4.3"
