[package]
name = "pixelveil_pyo3"
version = "1.0.0"
edition = "2024"
description = "A performant steganography and steganalysis library for hiding data in images, audio files, and videos"
license = "MIT"
authors = ["Jebbex <107323805+Jebbex1@users.noreply.github.com>"]
readme = "../README.md"
publish = false
repository = "https://github.com/Jebbex1/Pixelveil"
keywords = ["steganography", "steganalysis"]
workspace = "../"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.9"
pixelveil = { version = "1.0.0"}
pyo3 = { version = "0.27.1", features = ["extension-module"] }

[package.metadata.maturin]
bindings = "pyo3"
